[package]
name = "zerucrypt"
version = "0.1.1"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.23"
ripemd160 = "0.8"
secp256k1 = { version = "0.17", features = ["recovery", "rand", "std"] }
base64 = "0.11"
rand = { version = "0.6.5", features = ["std"] }
sha2 = "0.8"
basex-rs = "0.1"
