[package]
name = "zerucrypt"
version = "0.1.7"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"
description = "ZeroNet cryptocraphy helper library"
documentation = "http://localhost:43110/1M4Wwi5x5RUN1QJoS6CcnQh515FMtRNg1d/doc/zerucrypt"
readme = "README.md"
homepage = "http://localhost:43110/1M4Wwi5x5RUN1QJoS6CcnQh515FMtRNg1d"
repository = "http://localhost:43110/1M4Wwi5x5RUN1QJoS6CcnQh515FMtRNg1d"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.23", registry = "cratez" }
ripemd160 = "0.9"
secp256k1 = { version = "0.17", features = ["recovery", "rand", "std", "rand-std"] }
base64 = "0.12"
sha2 = "0.9"
basex-rs = "0.1"
thiserror = "1.0"
