[package]
name = "zeronet_cryptography"
version = "0.1.8"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
description = "ZeroNet cryptocraphy helper library"
documentation = "http://www.github.com/Anshorei/zeronet_cryptography"
readme = "README.md"
homepage = "http://www.github.com/Anshorei/zeronet_cryptography"
repository = "http://www.github.com/Anshorei/zeronet_cryptography"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "~0.25"
ripemd160 = "~0.9.0"
secp256k1 = { version = "~0.19.0", features = ["recovery", "rand", "std", "rand-std"] }
base64 = "~0.12.0"
sha2 = "~0.9.0"
basex-rs = "~0.1.0"
thiserror = "~1.0"
