[package]
name = "zeronet_sign_derive"
version = "0.1.9"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
description = "ZeroNet content signing"
documentation = "http://www.github.com/Anshorei/zeronet_cryptography"
readme = "../zeronet_sign/README.md"
homepage = "http://www.github.com/Anshorei/zeronet_cryptography"
repository = "http://www.github.com/Anshorei/zeronet_cryptography"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zeronet_sign_derive"
proc-macro = true

[dependencies]
zeronet_cryptography = "0.1.9"
zeronet_sign = "0.1.9"
quote = "1.0"
syn = { version = "1.0", features = [ "parsing", "derive", "extra-traits" ] }

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
