[package]
name = "zerusign"
version = "0.1.1"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerucrypt = { version = "0.1.6", registry = "cratez" }
serde = "*"
serde_derive = "*"
