[package]
name = "zerusign_derive"
version = "0.1.4"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zerusign_derive"
proc-macro = true

[dependencies]
zerucrypt = { version = "0.1.6", registry = "cratez" }
zerusign = { version = "0.1.1", registry = "cratez" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [ "parsing", "derive", "extra-traits" ] }
